// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Profiles /> renders the <Profiles /> with populated data 1`] = `
<div
  class="sc-liquwA cInPmk"
>
  <h1
    class="sc-eTdEpr evkZhY"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-fTgapq jguJie"
  >
    <li
      class="sc-WChnI dFmuAW"
    >
      <img
        class="sc-foMnoT kkgVyi"
        data-testid="profile-picture"
        src="/images/users//images/karl.png.png"
      />
      <p
        class="sc-ZubPq geyaJe"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;

exports[`<Profiles /> renders the <Profiles /> with populated data but misc profile image 1`] = `
<div
  class="sc-liquwA cInPmk"
>
  <h1
    class="sc-eTdEpr evkZhY"
  >
    Who's watching?
  </h1>
  <ul
    class="sc-fTgapq jguJie"
  >
    <li
      class="sc-WChnI dFmuAW"
    >
      <img
        class="sc-foMnoT kkgVyi"
        data-testid="profile-picture-misc"
        src="/images/misc/loading.gif"
      />
      <p
        class="sc-ZubPq geyaJe"
      >
        Karl
      </p>
    </li>
  </ul>
</div>
`;
